FIX SPACING

--- a/src/pages/ProductDetails/index.css
+++ b/src/pages/ProductDetails/index.css
@@ -123,7 +123,6 @@
 }
 
 .product-details-card-price {
-  margin: 20px 0;
   color: #d97706;
   font-weight: 500;
   font-size: 1.25rem;
